--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/footer_e_header.css">
     
-    <link rel="shortcut icon" href="./src/images/Plane.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="src/images/Plane.webp" type="image/x-icon">
     <title>Blog de Viagens</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
                 style="text-decoration: underline;">Home</a>
 
                 <!-- PAGINA 1 -->
-                <a href="pages/dicas-de-viagem.html">Dicas de viagem</a>
+                <a href="./pages/dicas-de-viagem.html">Dicas de viagem</a>
 
                 <!-- PAGINA 2 -->
                 <a href="pages/destinos.html">Destinos</a>
@@ -50,7 +50,7 @@
             <h2 id="text-apresentation">
                 Viagens & <br> aventuras
                 <img
-                src="src/images/planeFavicon.png"
+                src="./src/images/planeFavicon.png"
                 width="40" heigth="auto"
                 alt="icone de aviao">
             </h2>
