--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <a href="./pages/destinos.html#santorini">
                         <div class="image">
                             <img 
-                            src="/src/images/santorini.webp"
+                            src="./src/images/santorini.webp"
                             alt="foto de santorini"
                             width="100%"
                             height="auto"
