--- a/pages/dicas-de-viagem.html
+++ b/pages/dicas-de-viagem.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/footer_e_header.css">
-    <link rel="stylesheet" href="/src/css/dicas_e_historias.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/footer_e_header.css">
+    <link rel="stylesheet" href="../src/css/dicas_e_historias.css">
 
     <link rel="shortcut icon" href="/src/images/Plane.webp" type="image/x-icon">
     <title>Blog de Viagens</title>
