--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/style.css">
-    <link rel="stylesheet" href="./src/css/footer_e_header.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/footer_e_header.css">
     
     <link rel="shortcut icon" href="src/images/Plane.webp" type="image/x-icon">
     <title>Blog de Viagens</title>
@@ -25,7 +25,7 @@
                 style="text-decoration: underline;">Home</a>
 
                 <!-- PAGINA 1 -->
-                <a href="./pages/dicas-de-viagem.html">Dicas de viagem</a>
+                <a href="pages/dicas-de-viagem.html">Dicas de viagem</a>
 
                 <!-- PAGINA 2 -->
                 <a href="pages/destinos.html">Destinos</a>
@@ -50,7 +50,7 @@
             <h2 id="text-apresentation">
                 Viagens & <br> aventuras
                 <img
-                src="./src/images/planeFavicon.png"
+                src="src/images/planeFavicon.png"
                 width="40" heigth="auto"
                 alt="icone de aviao">
             </h2>
@@ -82,7 +82,7 @@
                     <a href="pages/destinos.html#kyoto">
                         <div class="image">
                             <img 
-                            src="./src/images/kyoto-japao.webp"
+                            src="src/images/kyoto-japao.webp"
                             alt="foto de kyoto"
                             width="100%"
                             height="auto"
@@ -109,10 +109,10 @@
             <div class="destaques-content">
 
                 <div class="image">
-                    <a href="./pages/destinos.html#patagonia">
+                    <a href="pages/destinos.html#patagonia">
                         <div class="image">
                             <img
-                            src="./src/images/patagonia.webp"
+                            src="src/images/patagonia.webp"
                             alt="foto de patagonia"
                             width="100%"
                             height="auto"
@@ -140,10 +140,10 @@
             <div class="destaques-content">
 
                 <div class="image">
-                    <a href="./pages/destinos.html#santorini">
+                    <a href="pages/destinos.html#santorini">
                         <div class="image">
                             <img 
-                            src="./src/images/santorini.webp"
+                            src="src/images/santorini.webp"
                             alt="foto de santorini"
                             width="100%"
                             height="auto"
@@ -178,10 +178,10 @@
             <!-- CONTEUDO 4 -->
             <div class="destaques-content">
                 <div class="image">
-                    <a href="/pages/dicas-de-viagem.html#dica2">
+                    <a href="pages/dicas-de-viagem.html#dica2">
                         <div class="image">
                             <img 
-                            src="/src/images/imagem-bagagem.jpg"
+                            src="src/images/imagem-bagagem.jpg"
                             alt="imagems de bagagem"
                             width="100%"
                             height="auto"
@@ -208,10 +208,10 @@
             <div class="destaques-content">
 
                 <div class="image">
-                    <a href="/pages/dicas-de-viagem.html#dica1">
+                    <a href="pages/dicas-de-viagem.html#dica1">
                         <div class="image">
                             <img 
-                            src="/src/images/imagem-planejamento.jpg"
+                            src="src/images/imagem-planejamento.jpg"
                             alt="ilustração de planejamento"
                             width="100%"
                             height="auto"
@@ -252,7 +252,7 @@
         <div class="FLEX-adicional-container" >
 
             <div class="adicional-content">
-                <a href="/pages/historias-viajantes.html">
+                <a href="pages/historias-viajantes.html">
 
                     <div class="title">
                         <h4>Historias de viajantes</h4>
@@ -274,7 +274,7 @@
              
             <div class="adicional-content">
 
-                <a href="/pages/pesquisa.html" target="_blank">
+                <a href="pages/pesquisa.html" target="_blank">
                     <div class="title">
                         <h4>Pesquisa</h4>
                     </div>
@@ -305,19 +305,19 @@
         <nav>
             <div class="div-footer">
                 <div>
-                    <a href="/pages/pesquisa.html">Pesquisa Combustiveis</a>
+                    <a href="pages/pesquisa.html">Pesquisa Combustiveis</a>
                 </div>
 
                 <div>
-                    <a href="/pages/historias-viajantes.html">Historias de Viajantes</a>
+                    <a href="pages/historias-viajantes.html">Historias de Viajantes</a>
                 </div>
 
                 <div>
-                    <a href="/pages/destinos.html">Destinos</a>
+                    <a href="pages/destinos.html">Destinos</a>
                 </div>
 
                 <div>
-                    <a href="/pages/dicas-de-viagem.html">Dicas de viagem</a>
+                    <a href="pages/dicas-de-viagem.html">Dicas de viagem</a>
                 </div>
 
                 <div>
@@ -325,7 +325,7 @@
                 </div>
 
                 <div>
-                    <a href="/pages/contatos.html" target="_blank">Contatos</a>
+                    <a href="pages/contatos.html" target="_blank">Contatos</a>
                 </div>
 
             </div>
