--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 Viagens & <br> aventuras
                 <img
                 src="src/images/planeFavicon.png"
-                width="40" heigth="auto"
+                width="40" height="auto"
                 alt="icone de aviao">
             </h2>
         
