Update path favicon destinos.html

--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../src/css/footer_e_header.css">
     <link rel="stylesheet" href="../src/css/destinos.css">
 
-    <link rel="shortcut icon" href="/src/images/Plane.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/images/Plane.webp" type="image/x-icon">
     <title>Blog de Viagens</title>
 </head>
 <body>
