--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -74,7 +74,9 @@
     <!-- ----------------main-------- ----->
     <main>
         <div class="destinos-container">
-
+                         <img src="../src/images/planeFavicon.png" 
+                        width="40" heigth="auto"
+                        alt="icone de um aviao">
             <div class="destinos-content"  >
                 <div class="top-content">
 
