--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -48,7 +48,7 @@
         <div class="img-background">
             <div id="text-apresentation" >
                 <h1>Destinos Recomendados
-                    <img src="../src/images/planeFavicon.png" 
+                    <img src="../src/images/bali-indonesia.webp" 
                         width="40" heigth="auto"
                         alt="icone de um aviao">
                 </h1>
