--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../src/css/footer_e_header.css">
     <link rel="stylesheet" href="../src/css/destinos.css">
 
-    <link rel="shortcut icon" href="./src/images/Plane.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/images/Plane.webp" type="image/x-icon">
     <title>Blog de Viagens</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
         <div class="img-background">
             <div id="text-apresentation" >
                 <h1>Destinos Recomendados
-                    <img src="../src/images/bali-indonesia.webp" 
+                    <img src="../src/images/Plane-icone.png" 
                         width="40" heigth="auto"
                         alt="icone de um aviao">
                 </h1>
