--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
 
     <div>
         <div class="img-background">
-            <h2 id="text-apresentation">
-                Viagens & <br> aventuras
-            </h2>
-            <img
-                src="src/images/planeFavicon.png"
-                width="40" height="auto"
-                alt="icone de aviao">
-                
-        </div>
+            <div class="text-apresentation">
+                <h1>Viagens & <br> aventuras</h1>
+
+                <img
+                    src="src/images/plane-icone.png"
+                    width="40" 
+                    height="auto"
+                    alt="icone de aviao">
+            </div> <!--texto e icone de apresentação sobre a imagem-->
+
+        </div> <!--image background-->
     </div>
 
 
