--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -71,7 +71,7 @@
 
             <!------------formulario----------------  -->
                 <div class="main-content">
-                    <h2>Envie um comentario</h2>
+                    <h2>Envie um comentário</h2>
                     <div class="contatos" >
 
                         <form action="mailto:" method="post">
@@ -92,7 +92,7 @@
 
                                 <textarea name="comentario" id="comentario" cols="30" 
                                 rows="10" 
-                                required placeholder="Digite um comentario"
+                                required placeholder="Digite um comentário"
                                 ></textarea>
 
                                 <button type="submit">Enviar</button>
