--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -31,7 +31,7 @@
                 <a href="destinos.html">Destinos</a>
 
                 <!-- PAGINA 3 -->
-                <a href="historias-viajantes.html" >Historias de viajantes</a>
+                <a href="historias-viajantes.html" >Histórias de viajantes</a>
                
             </nav>
 
@@ -116,7 +116,7 @@
                 </div>
 
                 <div>
-                    <a href="historias-viajantes.html">Historias de Viajantes</a>
+                    <a href="historias-viajantes.html">Histórias de Viajantes</a>
                 </div>
 
                 <div>
@@ -132,7 +132,7 @@
                 </div>
 
                 <div>
-                    <a href="pesquisa.html">Pesquisa Combustiveis</a>
+                    <a href="pesquisa.html">Pesquisa Combustíveis</a>
                 </div>
 
             </div>
