--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -30,7 +30,7 @@
                 <a href="destinos.html" style="text-decoration: underline;">Destinos</a>
 
                 <!-- PAGINA 3 -->
-                <a href="historias-viajantes.html" >Historias de viajantes</a>
+                <a href="historias-viajantes.html" >Histórias de viajantes</a>
                
             </nav>
 
@@ -248,11 +248,11 @@
         <nav>
             <div class="div-footer">
                 <div>
-                    <a href="pesquisa.html">Pesquisa Combustiveis</a>
+                    <a href="pesquisa.html">Pesquisa Combustíveis</a>
                 </div>
 
                 <div>
-                    <a href="historias-viajantes.html">Historias de Viajantes</a>
+                    <a href="historias-viajantes.html">Histórias de Viajantes</a>
                 </div>
 
                 <div>
