--- a/pages/historias-viajantes.html
+++ b/pages/historias-viajantes.html
@@ -31,7 +31,7 @@
                 <a href="destinos.html">Destinos</a>
 
                 <!-- PAGINA 3 -->
-                <a href="historias-viajantes.html"  style="text-decoration: underline;">Historias de viajantes</a>
+                <a href="historias-viajantes.html"  style="text-decoration: underline;">Histórias de viajantes</a>
                
             </nav>
 
@@ -49,7 +49,7 @@
         <div class="main-container">
             
                 <div class="text-apresentation">
-                    <h1>Historias &<br> Aventuras</h1>
+                    <h1>Histórias &<br> Aventuras</h1>
 
                     <img src="../src/images/plane-icone.png"
                         width="40"
@@ -98,11 +98,11 @@
         <nav>
             <div class="div-footer">
                 <div>
-                    <a href="pesquisa.html">Pesquisa Combustiveis</a>
+                    <a href="pesquisa.html">Pesquisa Combustíveis</a>
                 </div>
 
                 <div>
-                    <a href="historias-viajantes.html">Historias de Viajantes</a>
+                    <a href="historias-viajantes.html">Histórias de Viajantes</a>
                 </div>
 
                 <div>
