--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -32,7 +32,7 @@
                 <a href="destinos.html">Destinos</a>
 
                 <!-- PAGINA 3 -->
-                <a href="historias-viajantes.html" id="PAGE3">Historias de viajantes</a>
+                <a href="historias-viajantes.html" id="PAGE3">Histórias de viajantes</a>
                
             </nav>
 
@@ -49,11 +49,12 @@
 
     <div class="flex-tabela-container">
         <div id="apresentacao">
-            <h2 >Pesquisa  Coleta de preços de combustiveis</h2>
+            <h2 >Pesquisa Coleta de preços de combustíveis</h2>
             <br>
 
             <p>
-                Foram feitas 10 coletas de preços em 6 postos diferentes e  de diferentes bairros.  
+                Foram feitas 10 coletas de preços em 6 postos diferentes e de diferentes bairros. <br>
+                Monstrando a evolução do preço médio dos combustíveis e o menor preço por bairros.
             </p>
         </div>
 
@@ -648,7 +649,7 @@
 
         <div>
             <div>
-                <h3>Gráfico de Menor preço dos combustiveis por bairro</h3>
+                <h3>Gráfico de Menor preço dos combustiveis por bairros</h3>
                 <hr>
             </div>
             
@@ -674,7 +675,7 @@
                     <a href="../index.html" >Home</a>
                 </div>
                 <div>
-                    <a href="historias-viajantes.html">Historias de Viajantes</a>
+                    <a href="historias-viajantes.html">Histórias de Viajantes</a>
                 </div>
                 <div>
                     <a href="destinos.html">Destinos</a>
