--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -635,7 +635,7 @@
 
         <div>
             <div>
-                <h3>Gráfico evolução do preço médio dos combustiveis</h3>
+                <h3>Gráfico evolução do preço médio dos combustíveis</h3>
                 <hr>
             </div>
             
@@ -649,7 +649,7 @@
 
         <div>
             <div>
-                <h3>Gráfico de Menor preço dos combustiveis por bairros</h3>
+                <h3>Gráfico de Menor preço dos combustíveis por bairros</h3>
                 <hr>
             </div>
             
