--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <p>
                             Pesquisa feita na 
                             <span style="font-weight: 600;"
-                            >Serra</span> envolvendo a coleta de preços de combustiveis. A intenção é avaliar a evolução dos preços ao longo do tempo. 
+                            >Serra</span> envolvendo a coleta de preços de combustíveis. A intenção é avaliar a evolução dos preços ao longo do tempo. 
                             A oscilação no preço dos combustíveis pode afetar o preço de sua viagem. <br>
                             Clique e saiba mais.
                         </p>
@@ -307,7 +307,7 @@
         <nav>
             <div class="div-footer">
                 <div>
-                    <a href="pages/pesquisa.html">Pesquisa Combustiveis</a>
+                    <a href="pages/pesquisa.html">Pesquisa Combustíveis</a>
                 </div>
 
                 <div>
