--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="../src/css/reset.css">
     <link rel="stylesheet" href="../src/css/footer_e_header.css">
     <link rel="stylesheet" href="../src/css/pesquisa.css">
     
