--- a/pages/dicas-de-viagem.html
+++ b/pages/dicas-de-viagem.html
@@ -56,7 +56,7 @@
                         Aqui vai algumas dicas que podem ser úteis em sua viagem, especialmente se seu passeio for mais longo.
                     </p>
         
-                    <div class="content" id="dica1">
+                    <div class="main-content" id="dica1">
                         <div>
                             <img src="../src/images/imagem-planejamento.jpg"
                             width="300px"
@@ -69,7 +69,7 @@
                         </p>
                         <a href="#">Saiba mais</a>
                     </div> <!--final dica 1-->
-                    <div class="content" id="dica2">
+                    <div class="main-content" id="dica2">
                         <div>
                             <img src="../src/images/imagem-bagagem.jpg"
                             width="300px"
@@ -82,7 +82,7 @@
                         </p>
                         <a href="#">Saiba mais</a>
                     </div> <!-- final dica 2-->
-                    <div class="content">
+                    <div class="main-content">
                         <div>
                             <img src="../src/images/imagem-documento.webp"
                             width="300px"
@@ -95,7 +95,7 @@
                         </p>
                         <a href="#">Saiba mais</a>
                     </div> <!-- final dica 3-->
-                    <div class="content">
+                    <div class="main-content">
                         <div>
                             <img src="../src/images/imagem-garrafa.webp"
                             width="300px"
@@ -108,7 +108,7 @@
                         </p>
                         <a href="#">Saiba mais</a>
                     </div> <!--final  dica 4-->
-                    <div class="content">
+                    <div class="main-content">
                         <div>
                             <img src="../src/images/icone-de-mapa.webp"
                             width="300px"
