--- a/pages/historias-viajantes.html
+++ b/pages/historias-viajantes.html
@@ -54,21 +54,21 @@
                     <p class="subtitle">
                         Aqui você encontrará incríveis historias de viajantes para inspirar sua proxima viagem!
                     </p>
-                    <div class="content">
+                    <div class="main-content">
                         <h2>Aventura nas Montanhas</h2>
                         <p>
                             Uma experiência inesquecível escalando as montanhas dos Andes, cheia de desafios e vistas deslumbrantes.
                         </p>
                         <a href="#">Leia mais</a>
                     </div> <!-- historia 1-->
-                    <div class="content">
+                    <div class="main-content">
                         <h2>Explorando Bali</h2>
                         <p>
                             Descubra como explorar templos antigos e aproveitar praias paradisíacas em uma das ilhas mais fascinantes da Indonésia.
                         </p>
                         <a href="#">Leia mais</a>
                     </div> <!-- historia 2-->
-                    <div class="content">
+                    <div class="main-content">
                         <h2>Safari na África do Sul</h2>
                         <p>
                             Conheça a experiência de um safari emocionante e avistamentos de vida selvagem na reserva de Kruger.
