--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" href="../src/images/icone-planilha.png" type="image/x-icon">
 
     <title>Tabela de Preços de Combustíveis</title>
+    <style>
+        body{ background-color: white;}
+    </style>
     
 </head>
 <body>
