--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -81,7 +81,7 @@
                                         rows="10"
                                         required placeholder="Digite um comentário"
                                         ></textarea>
-                                        <button type="submit">Enviar</button>
+                                        <button type="submit" id="btn-form" onClick="enviar()" >Enviar</button>
                                     </div>
         
                                 </form> <!--fim do formulario-->
@@ -117,6 +117,12 @@
             </footer>
         </div>
     </div>
+    
+    <script>
+        function enviar(){
+            document.getElementById("btn-form").outerHTML=" <button type='submit' id='disabled' disabled >Formulario Enviado</button> ";
+        }
+    </script>
 
 </body>
 </html>
