--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -63,7 +63,7 @@
                         <div class="main-content">
                             <h2>Envie um comentário</h2>
                             <div class="contatos" >
-                                <form action="mailto:" method="post">
+                                <form action="" method="post">
                                     <div class="contatos">
                                         <label for="nome">Nome:</label>
                                         <input
