--- a/pages/historias-viajantes.html
+++ b/pages/historias-viajantes.html
@@ -52,7 +52,7 @@
                         </div> <!--texto de apresentação-->
         
                     <p class="subtitle">
-                        Aqui você encontrará incríveis historias de viajantes para inspirar sua proxima viagem!
+                        Aqui você encontrará incríveis histórias de viajantes para inspirar sua próxima viagem!
                     </p>
                     <div class="main-content">
                         <h2>Aventura nas Montanhas</h2>
