--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -77,7 +77,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Posto Arara azul</td>
+                                <td>Posto Arara Azul</td>
                                 <td>Chácara Pareral</td>
                                 <td>Rodovia ES-10</td>
                                 <td>Serra</td>
