--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -58,12 +58,12 @@
         
                 <p>
                     Foram feitas 10 coletas de preços em 6 postos diferentes e de diferentes bairros. <br>
-                    Monstrando a evolução do preço médio dos combustíveis e o menor preço por bairros.
+                    Monstrando o o menor preço por bairro, a média Geral, a média por posto e a evolução do preço médio dos combustíveis.
                 </p>
             </div>
         
             <div class="tabela-content infos" onClick="atualiza()">
-                <h2 id="caption">Clique para alterar a exibição</h2>
+                <h2 id="caption">Clique para alternar a exibição da tabela</h2>
                 <div>
                     <table id="tabela-dinamica"> 
                         <thead>
