--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -53,12 +53,12 @@
     <main>
         <div class="flex-tabela-container">
             <div id="apresentacao">
-                <h2 >Pesquisa Coleta de preços de combustíveis</h2>
+                <h2>Pesquisa Coleta de preços de combustíveis</h2>
                 <br>
         
                 <p>
                     Foram feitas 10 coletas de preços em 6 postos diferentes e de diferentes bairros. <br>
-                    Monstrando o o menor preço por bairro, a média Geral, a média por posto e a evolução do preço médio dos combustíveis.
+                    Monstrando o menor preço por bairro, a média geral, a média por posto e a evolução do preço médio dos combustíveis.
                 </p>
             </div>
         
