--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -97,13 +97,13 @@
                             <a href="../index.html">Home</a>
                         </div>
                         <div>
-                            <a href="historias-viajantes.html">Histórias de Viajantes</a>
+                            <a href="dicas-de-viagem.html">Dicas de viagem</a>
                         </div>
                         <div>
                             <a href="destinos.html">Destinos</a>
                         </div>
                         <div>
-                            <a href="dicas-de-viagem.html">Dicas de viagem</a>
+                            <a href="historias-viajantes.html">Histórias de viajantes</a>
                         </div>
                         <div>
                             <a href="#">Login</a>
