--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -109,7 +109,7 @@
                             <a href="#">Login</a>
                         </div>
                         <div>
-                            <a href="pesquisa.html">Pesquisa Combustíveis</a>
+                            <a id="pesquisa" href="pesquisa.html">Pesquisa Combustíveis</a>
                         </div>
                     </div>
                 </nav>
