--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -123,6 +123,9 @@
             document.getElementById("btn-form").outerHTML=" <button type='submit' id='disabled' disabled >Formulario Enviado</button> ";
         }
     </script>
+    
+    <script src="../src/js/redimencionarJS.js">
+    </script>
 
 </body>
 </html>
