--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -48,7 +48,6 @@
         </div> <!--fim flex-container-header-->
         <hr>
     </header>
-    
 
     <main>
         <div class="flex-tabela-container">
@@ -136,7 +135,8 @@
             <h1>Tabela de Preços de Combustíveis</h1>
         </div>
 
-
+        <script src="../src/js/redimencionarJS.js">
+        </script>
     
         <div class="flex-tabela-container">
             <!-- Tabela 1 -->
