--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <nav>
                     <div class="div-footer">
                         <div>
-                            <a href="pages/pesquisa.html">Pesquisa Combustíveis</a>
+                            <a id="pesquisa" href="pages/pesquisa.html">Pesquisa Combustíveis</a>
                         </div>
                         <div>
                             <a href="pages/historias-viajantes.html">Histórias de Viajantes</a>
