--- a/pages/historias-viajantes.html
+++ b/pages/historias-viajantes.html
@@ -83,7 +83,7 @@
                 <nav>
                     <div class="div-footer">
                         <div>
-                            <a href="pesquisa.html">Pesquisa Combustíveis</a>
+                            <a id="pesquisa" href="pesquisa.html">Pesquisa Combustíveis</a>
                         </div>
                         <div>
                             <a href="historias-viajantes.html">Histórias de Viajantes</a>
