--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <a id="pesquisa" href="pages/pesquisa.html">Pesquisa Combustíveis</a>
                         </div>
                         <div>
-                            <a href="pages/historias-viajantes.html">Histórias de Viajantes</a>
+                            <a id="historias" href="pages/historias-viajantes.html">Histórias de Viajantes</a>
                         </div>
                         <div>
                             <a href="pages/destinos.html">Destinos</a>
