--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -28,7 +28,7 @@
                         <!-- PAGINA 2 -->
                         <a href="destinos.html">Destinos</a>
                         <!-- PAGINA 3 -->
-                        <a href="historias-viajantes.html" >Histórias de viajantes</a>
+                        <a id="historias" href="historias-viajantes.html" >Histórias de viajantes</a>
         
                     </nav>
                     <!-- div login/entrar -->
