--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -200,7 +200,7 @@
                             <a id="pesquisa" href="pesquisa.html">Pesquisa Combustíveis</a>
                         </div>
                         <div>
-                            <a href="historias-viajantes.html">Histórias de Viajantes</a>
+                            <a id="historias" href="historias-viajantes.html">Histórias de Viajantes</a>
                         </div>
                         <div>
                             <a href="#">Destinos</a>
