--- a/pages/dicas-de-viagem.html
+++ b/pages/dicas-de-viagem.html
@@ -133,7 +133,7 @@
                             <a id="pesquisa" href="pesquisa.html">Pesquisa Combustíveis</a>
                         </div>
                         <div>
-                            <a href="historias-viajantes.html">Histórias de Viajantes</a>
+                            <a id="historias" href="historias-viajantes.html">Histórias de Viajantes</a>
                         </div>
                         <div>
                             <a href="destinos.html">Destinos</a>
