--- a/pages/pesquisa.html
+++ b/pages/pesquisa.html
@@ -691,7 +691,7 @@
                     <a href="../index.html" >Home</a>
                 </div>
                 <div>
-                    <a href="historias-viajantes.html">Histórias de Viajantes</a>
+                    <a id="historias" href="historias-viajantes.html">Histórias de Viajantes</a>
                 </div>
                 <div>
                     <a href="destinos.html">Destinos</a>
